2005-07-11  William Lachance  <wrlach@gmail.com>

	* admin-tool/usersdialog.py: Sort by name of user.

	* admin-tool/sabayon.glade: Increase default width
	of users dialog to 440 from 400 (eliminates need for
	horizontal scrollbar in most cases)

Sun Jul  3 11:31:26 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* po/POTFILES.in: adding missing admin-tool/changeswindow.py

2005-07-01  Mark McLoughlin  <markmc@redhat.com>

	* lib/config.py.in: add some more files to
	ignore.

2005-06-30  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sessionwidget.py: fixup debug spew and
	send the modifier state with button events.
	
	* lib/xlib.c:
	(xlib_send_button_event): allow sending the modifier
	state.
	(xlib_send_motion_event),
	(xlib_send_crossing_event): fix deprecation warning
	caused by the fact that we're passed floating point
	co-ordinates and ask PyArg_Parse() to convert them
	to integers.

2005-06-30  Mark McLoughlin  <markmc@redhat.com>

	Patch from William Lachance <wrlach@gmail.com> in
	bug #308735

	* lib/config.py.in: add .gconf.path.defaults and
	.gconf.path.mandatory to FILES_TO_IGNORE

2005-06-30  Mark McLoughlin  <markmc@redhat.com>

	Re-work things such that we display only the latest
	change in a status bar at the bottom of the window
	and a more detailed list of changes can be reached
	from the menus.

	The idea is that each change you make in the protosession
	should correspond to a single change which Sabayon
	notices. Lot of work needed to get there, though.

	* admin-tool/sessionwindow.py: add a Statusbar and
	remove the changes list.
	
	* admin-tool/changeswindow.py: split out the changes
	list here.
	
	* admin-tool/Makefile.am: add changeswindow.py.

	* admin-tool/sabayon.glade: remove the session window.
	
	* lib/storage.py: fix debug spew.

2005-06-22  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sessionwindow.py,
	  admin-tool/sabayon.glade: Move the monitor
	output into a pane on the righthand side of the