@@ -1,3 +1,9 @@
+2005-07-14  William Lachance  <wrlach@gmail.com>
+
+	* admin-tool/changeswindow.py: Desensitize "mandatory" 
+	column in changes window if ignore is selected. Fixes
+	bug #305786.
+
 2005-07-11  William Lachance  <wrlach@gmail.com>
 
 	* admin-tool/usersdialog.py: Sort by name of user.
